# ardent0

./: .gitignore  README.md  deploy.sh
basics/helloworld/: CMakeLists.txt  main.S
basics/helloworld_nc/: CMakeLists.txt  main.S
src/: CMakeLists.txt  main.c
